update to java 19  - switch to virtual threads  - fix tests  - remove quasar suspendable