@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        vertxJooqVersion = '6.5.0'
+        vertxJooqVersion = '6.5.5'
         flywayVersion = '6.5.5'
     }
     repositories {
@@ -13,40 +13,37 @@ buildscript {
         classpath "io.github.jklingsporn:vertx-jooq-generate:$vertxJooqVersion"
         classpath "org.postgresql:postgresql:$postgresqlVersion"
         classpath "io.vertx:vertx-core:$vertxVersion"
-        classpath "com.databasesandlife:java-common:$databasesandlifeVersion"
     }
 }
 
 
 plugins {
     id 'com.bmuschko.docker-remote-api' version '7.3.0'
-    id 'com.google.cloud.tools.jib' version '3.2.1'
+    id 'com.google.cloud.tools.jib' version '3.3.1'
     id "org.flywaydb.flyway" version "$flywayVersion"
     id 'com.github.johnrengelman.shadow' version "$shadowPluginVersion"
     id 'org.javamodularity.moduleplugin'
+    id 'idea'
+    id 'application'
+}
+
+apply from: '../gradle/instrument.gradle'
+
+repositories {
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 
-apply plugin: 'base'
-apply plugin: 'java-library'
-apply plugin: 'application'
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'idea'
-apply from: '../gradle/instrument.gradle'
 
-
-import com.bmuschko.gradle.docker.domain.LivenessProbe
 import com.bmuschko.gradle.docker.tasks.container.DockerCreateContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerRemoveContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerStartContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerStopContainer
-import com.databasesandlife.util.jooq.PostgresXmlDomElementBinding
 import io.github.jklingsporn.vertx.jooq.shared.postgres.JSONBToJsonObjectConverter
 import io.vertx.core.json.JsonObject
 import org.apache.tools.ant.taskdefs.condition.Os
 import org.jooq.codegen.GenerationTool
 import org.jooq.meta.jaxb.*
-import org.w3c.dom.Element
 
 def isWindows = Os.isFamily(Os.FAMILY_WINDOWS)
 def localUsername = 'admin'
@@ -55,36 +52,31 @@ def localDatabaseName = 'spellsource'
 def mainClassNameConst = 'com.hiddenswitch.framework.EntryPoint'
 def jdbcUrl = "jdbc:postgresql://localhost:5432/$localDatabaseName"
 def createPostgresImage = tasks.getByPath(':spellsource-containers:createPostgresImage')
-def createKeycloakImage = tasks.getByPath(':spellsource-containers:createKeycloakImage')
-def openModulesArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+def jvmArgs = ['--enable-preview', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 
 application {
     mainClassName mainClassNameConst
 }
 
-// configures the migration test, which specially starts mongo
-sourceSets {
-    testMigrations {
-        compileClasspath += main.output + test.output
-        runtimeClasspath += main.output + test.output
-    }
-}
-
-configurations {
-    testMigrationsImplementation.extendsFrom(testImplementation)
-    testMigrationsRuntime.extendsFrom(testRuntime)
-}
-
 dependencies {
-    api project(':spellsource-common')
-    api project(':spellsource-game')
-    api project(':spellsource-cards-git')
-    api project(':vertx-sync')
+    implementation project(':spellsource-common')
+    implementation project(':spellsource-game')
+    implementation project(':spellsource-cards-git')
+    implementation 'io.vertx:vertx-async-await-incubator:1.0.0-SNAPSHOT'
+    implementation 'io.vertx:vertx-execute-blocking-incubator:1.0.0-SNAPSHOT'
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation group: 'io.vertx', name: 'vertx-infinispan', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-web-client', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-service-discovery', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-web', version: vertxVersion
+
+    // includes withCallCredentials fix
+    implementation ("com.github.doctorpangloss.vertx-grpc-1:vertx-grpc-server:c4d99c22f6") {
+        exclude group: 'io.vertx', module: 'vertx-core'
+    }
+    implementation ("com.github.doctorpangloss.vertx-grpc-1:vertx-grpc-client:c4d99c22f6") {
+        exclude group: 'io.vertx', module: 'vertx-core'
+    }
 
     // keycloak
     implementation 'net.openhft:zero-allocation-hashing:0.16'
@@ -95,14 +87,7 @@ dependencies {
     implementation "org.keycloak:keycloak-server-spi:$keycloakVersion"
     implementation "org.keycloak:keycloak-server-spi-private:$keycloakVersion"
 
-    // environment
-    implementation "ch.qos.logback:logback-classic"
-    implementation("com.databasesandlife:java-common:$databasesandlifeVersion") {
-        exclude group: 'com.google.gdata', module: '*'
-        exclude group: 'log4j', module: '*'
-        exclude group: 'dnsjava', module: '*'
-        exclude group: 'commons-io', module: '*'
-    }
+    implementation "ch.qos.logback:logback-classic:$logbackVersion"
 
     implementation group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
@@ -125,11 +110,12 @@ dependencies {
         exclude group: 'org.checkerframework', module: 'checker-qual'
     }
 
-    implementation('org.jboss.resteasy:resteasy-client-vertx:6.2.1.Final') {
+    implementation("org.jboss.resteasy:resteasy-client:$resteasyVersion") {
         exclude group: 'io.vertx', module: 'vertx-core'
     }
 
-    implementation 'org.jooq:jooq:3.16.4'
+    implementation group: "io.netty", name: "netty-resolver-dns-native-macos", version: nettyVersion, classifier: "osx-aarch_64"
+    implementation 'org.jooq:jooq:3.17.3'
     implementation "io.vertx:vertx-pg-client:$vertxVersion"
     implementation("io.github.jklingsporn:vertx-jooq-classic-reactive:$vertxJooqVersion") {
         exclude group: "io.vertx", module: '*'
@@ -155,6 +141,7 @@ dependencies {
     }
 
 
+    testImplementation "ch.qos.logback:logback-classic:$logbackVersion"
     testImplementation(project(':spellsource-containers'))
     testImplementation project(':spellsource-testutils')
     testImplementation("org.testcontainers:testcontainers:$testcontainersVersion")
@@ -168,7 +155,6 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.1'
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 jar {
@@ -188,10 +174,10 @@ shadowJar {
 run {
     group('spellsource')
     description("Starts the Spellsource server locally. Starts all dependencies using Docker (must be installed).")
-    dependsOn += [classes, testClasses, createPostgresImage, createKeycloakImage]
+    dependsOn += [classes, testClasses, createPostgresImage]
     classpath sourceSets.test.runtimeClasspath
     mainClass.set('com.hiddenswitch.framework.tests.applications.EntryPoint')
-    jvmArgs(openModulesArgs)
+    jvmArgs.addAll(jvmArgs)
 }
 
 artifacts {
@@ -236,16 +222,20 @@ task stopPostgresContainer(type: DockerStopContainer, group: 'Spellsource Intern
 }
 
 task createKeycloakContainer(type: DockerCreateContainer, group: 'Spellsource Internal') {
-    dependsOn += [createPostgresContainer, createKeycloakImage]
-    targetImageId createKeycloakImage.imageId
+    dependsOn += [createPostgresContainer]
+    imageId.set("quay.io/keycloak/keycloak:20.0")
     envVars.putAll([
-            'KEYCLOAK_DATABASE_HOST'    : 'gradleSupabasePostgres',
-            'KEYCLOAK_DATABASE_PORT'    : '5432',
-            'KEYCLOAK_DATABASE_USER'    : 'admin',
-            'KEYCLOAK_DATABASE_PASSWORD': 'password',
-            'KEYCLOAK_DATABASE_NAME'    : 'spellsource',
-            'KEYCLOAK_DATABASE_SCHEMA'  : 'keycloak'
+            'KEYCLOAK_ADMIN_USERNAME': "admin",
+            'KEYCLOAK_ADMIN_PASSWORD': 'password',
+            'KC_DB'                  : 'postgres',
+            'KC_DB_URL_HOST'         : 'gradleSupabasePostgres',
+            'KC_DB_URL_DATABASE'     : 'spellsource',
+            'KC_DB_USERNAME'         : 'admin',
+            'KC_DB_PASSWORD'         : 'password',
+            'KC_DB_SCHEMA'           : 'keycloak',
+            'KC_HOSTNAME_STRICT'     : 'false'
     ])
+    cmd.set(["start-dev"])
     hostConfig.autoRemove.set(true)
     hostConfig.portBindings.set(["8080:8080"])
     hostConfig.links.set(['gradleSupabasePostgres:gradleSupabasePostgres'])
@@ -255,7 +245,7 @@ task startKeycloakContainer(type: DockerStartContainer, group: 'Spellsource Inte
     dependsOn += [createKeycloakContainer, startPostgresContainer]
     targetContainerId createKeycloakContainer.getContainerId()
     doLast {
-        sleep(30000)
+        sleep(12000)
     }
 }
 
@@ -290,11 +280,7 @@ task jooqGenerate(group: 'Spellsource Internal') {
                                     new ForcedType()
                                             .withUserType(JsonObject.class.getName())
                                             .withConverter(JSONBToJsonObjectConverter.class.getName())
-                                            .withIncludeTypes("jsonb"),
-                                    /*new ForcedType()
-                                            .withUserType(Element.class.getName())
-                                            .withConverter(PostgresXmlDomElementBinding.class.getName())
-                                            .withIncludeTypes("xml")*/)
+                                            .withIncludeTypes("jsonb"))
                             .withIncludeTables(true)
                             .withIncludeRoutines(true)
                             .withIncludePackages(false)
@@ -365,22 +351,15 @@ test {
     }
 }
 
-task testLegacyMigration(type: Test, group: 'Spellsource') {
-    description('Tests the migration from the legacy server to this current server ')
-    dependsOn += [createPostgresImage, compileTestJava]
-    systemProperty 'mongo.dbpath', "$project.rootProject.rootDir/.mongo"
-    useJUnitPlatform()
-    testClassesDirs = sourceSets.testMigrations.output.classesDirs
-    classpath = sourceSets.testMigrations.runtimeClasspath
-    enableAssertions = false
-}
-
 jib {
+    from {
+        image = "eclipse-temurin:19.0.1_10-jre"
+    }
     to {
         image = 'docker.io/doctorpangloss/spellsource-server'
     }
     container {
         ports = ['8080']
-        jvmFlags = openModulesArgs
+        jvmFlags = jvmArgs
     }
 }
